[build-system]
requires = [
    "setuptools >= 61.0",   # required for PEP 660 support - builds the package.
    "setuptools_scm >= 8.0" # required for PEP 621 support - manages the version number based on git tags.
]
build-backend = "setuptools.build_meta" # Use setuptools as the engine to build this package.
include-package-data = true # This ensures that non-code files specified in MANIFEST.in are included in the package distribution.

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]


[project]
name = "three_ps_lcca_core"
dynamic = ["version"]   # The version will be determined by setuptools_scm based on git tags.
version = "1.0.0"  # This is a fallback version. The actual version will be determined by setuptools_scm.
dependencies = []
requires-python = ">= 3.12"

description = "A Python package for performing life cycle cost analysis (LCCA) on three primary steel design options: hot-rolled, cold-formed, and built-up steel sections. This package provides tools and functions to evaluate the economic performance of these steel design options over their entire life cycle, including initial costs, maintenance costs, and end-of-life costs. It is designed to assist engineers and decision-makers in selecting the most cost-effective steel design option for their projects."

authors = [
    {name = "Osdag", email = "osdag@fossee.in"}
]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["steel design", "life cycle analysis", "engineering"]

[project.scripts]